[tool.poetry]
name = "to_spotify"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "*"
colorama = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
rope = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
